27/07/2015:
	- Modified ROT command to accept horizontal flipping through "!" prefix as with IIIF.
	- Cosmetic improvement to FIF logging.
	- Modified TPTImage to disable use of memory mapping when opening images as this seems
	  to be slower when opening very large TIFFs.


24/07/2015:
	- Added timers to all image processing functions in CVT.cc + code cleanup.


21/07/2015:
	- Fixed error in View.cc when setting regions sizes that extend beyond image boundaries:
	  regions now cropped to boundaries.


20/07/2015:
	- More OpenMP parallelization and cleanups to Transform.cc


17/07/2015:
	- Increased buffer memory for JPEG encoding to handle certain images or tiles that
	  encode at Q=100 to sizes significantly larger than the raw data.
	- Added new CACHE_CONTROL server parameter to allow user control over this. If not
	  set, it defaults to the previous default value of "max-age=86400".
	- More image processing routines now parallelized with OpenMP: bilinear interpolation, 
	  for example, now parallelized and considerably faster.


19/03/2015:
	- Fix to KakaduImage.cc to check for increases in stripe heights and make sure
	  sufficient memory is allocated.


13/02/2015:
	- Added checks for NULL FCGX_GetParam results and to empty HTTP_IF_MODIFIED_SINCE.
	  See: https://github.com/ruven/iipsrv/issues/33 - thanks to Brian Helba.


12/02/2015:
	- Fixed @id decoding in IIIF.cc for paths containing slashes


19/01/2015:
	- Added missing <cctype> include in URL.h and replaced pow(2.0,x) with bit shifting in
	  KakaduImage.cc and View.cc. Now compiles cleanly with VisualStudio Express.
	- Added extra OpenMP parallel declarations to Transform.cc and autoconf directive to
	  enable OpenMP by default.


09/01/2015:
	- Better logging for exceptions in Main.cc


27/11/2014:
	- Added new magic identifier for BigTIFF images to IIPImage.cc


25/11/2014:
	- Fix of rounding error problem in View.cc for calculating resolution level.