@@ -131,10 +131,6 @@ void KakaduImage::loadImageInfo( int seq, int ang ) throw(file_error)
   j2k_colour = jpx_layer.access_colour(0);
   layer_size = jpx_layer.get_layer_size();
 
-  int cmp, plt, stream_id;
-  j2k_channels.get_colour_mapping(0,cmp,plt,stream_id);
-  j2k_palette = jpx_stream.access_palette();
-
   image_widths.push_back(layer_size.x);
   image_heights.push_back(layer_size.y);
   channels = codestream.get_num_components();
@@ -193,6 +189,27 @@ void KakaduImage::loadImageInfo( int seq, int ang ) throw(file_error)
 
   if( n > numResolutions ) virtual_levels = n-numResolutions-1;
   numResolutions = n;
+
+
+  // Check for a palette and LUT - only used for bilevel images for now
+  int cmp, plt, stream_id;
+  j2k_channels.get_colour_mapping(0,cmp,plt,stream_id);
+  j2k_palette = jpx_stream.access_palette();
+
+  if( j2k_palette.exists() && j2k_palette.get_num_luts()>0 ){
+    int entries = j2k_palette.get_num_entries();
+    float *lt = new float[entries];
+    j2k_palette.get_lut(0,lt);    // Note that we extract only first LUT
+    // Force to unsigned format, scale to 8 bit and load these into our LUT vector
+    for( int n=0; n<entries; n++ ){
+      lut.push_back((int)((lt[n]+0.5)*255));
+    }
+    delete[] lt;
+#ifdef DEBUG
+    logfile << "Kakadu :: Palette with " << j2k_palette.get_num_luts() << " LUT and " << entries
+	    << " entries/LUT with values " << lut[0] << "," << lut[1] << endl;
+#endif
+  }
 
 
   // Set our colour space - we let Kakadu automatically handle CIELAB->sRGB conversion for the time being
@@ -506,6 +523,7 @@ void KakaduImage::process( unsigned int res, int layers, int xoffset, int yoffse
 #endif
 
     // Create our buffers
+
     if( obpc == 16 ){
       stripe_buffer = new kdu_uint16[tw*stripe_heights[0]*channels];
       buffer = new unsigned short[tw*th*channels];
@@ -567,23 +585,26 @@ void KakaduImage::process( unsigned int res, int layers, int xoffset, int yoffse
       else if( obpc == 8 ){
 	b1 = &( ((kdu_byte*)stripe_buffer)[0] );
 	b2 = &( ((unsigned char*)buffer)[index] );
+
+	/* Handle 1 bit bilevel images, which we output scaled to 8 bits
+	   - ideally we would do this in the Kakadu pull_stripe function,
+	   but the precisions parameter seems not to work as expected.
+	   When requesting OUTPUT_COMPONENTS, data is provided as 0 or 128,
+	   so simply scale this up to [0,255]
+	*/
 	if( bpc == 1 ){
-	  // Expand bilevel images to full 8 bit range
-	  // - ideally we would do this in the Kakadu pull_stripe function,
-	  // but the precisions parameter seems not to work as expected.
+
 	  unsigned int k = tw * stripe_heights[0] * channels;
-	  // Deal with rare 1 bit "sRGB space" first
-	  if( colourspace == sRGB ){
-	    for( unsigned int n=0; n<k; n++ ){
-	      kdu_uint16 p = (kdu_uint16)((kdu_byte*)stripe_buffer)[n];
-	      // Do integer arithetic to multiply by just under 2
-	      ((kdu_byte*)stripe_buffer)[n] = (kdu_byte)( (p<<1) - (p>>2) );
-	    }
-	  }
-	  // The usual 1 channel 1 band case
-	  else{
+
+	  // Deal with inverted LUTs - we should really handle LUTs more generally, however
+	  if( !lut.empty() && lut[0]>lut[1] ){
 	    for( unsigned int n=0; n<k; n++ ){
 	      ((kdu_byte*)stripe_buffer)[n] =  ~(-((kdu_byte*)stripe_buffer)[n] >> 8);
+	    }
+	  }
+	  else{
+	    for( unsigned int n=0; n<k; n++ ){
+	      ((kdu_byte*)stripe_buffer)[n] =  (-((kdu_byte*)stripe_buffer)[n] >> 8);
 	    }
 	  }
 	}
